; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_ttime.c_taosParseTime.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_ttime.c_taosParseTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @taosParseTime(i8* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %10 = load i8*, i8** %6, align 8
  %11 = load i32, i32* %8, align 4
  %12 = call i32* @strnchr(i8* %10, i8 signext 84, i32 %11, i32 0)
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %4
  %15 = load i8*, i8** %6, align 8
  %16 = load i32*, i32** %7, align 8
  %17 = load i32, i32* %9, align 4
  %18 = call i32 @parseTimeWithTz(i8* %15, i32* %16, i32 %17)
  store i32 %18, i32* %5, align 4
  br label %24

19:                                               ; preds = %4
  %20 = load i8*, i8** %6, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @parseLocaltime(i8* %20, i32* %21, i32 %22)
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %19, %14
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}

declare dso_local i32* @strnchr(i8*, i8 signext, i32, i32) #1

declare dso_local i32 @parseTimeWithTz(i8*, i32*, i32) #1

declare dso_local i32 @parseLocaltime(i8*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
